# sandbox

./: .gitignore  LICENCE  README.md  bumper  chunksorted.cpp  com.danielgrigg.bumper.plist  postgres_liners.txt
GL/.templates/: CMakeLists.txt  template.cpp  template.fp  template.vp
GL/SimpleAnimate/: SimpleAnimate.1  SimpleAnimate.cpp
GL/Skeleton/: Skeleton.1  Skeleton.cpp
GL/cubemaps/: CMakeLists.txt  Makefile  cubemap_reflect.fp  cubemap_reflect.vp  cubemap_vertex_reflect.vp  cubemaps.cpp  glforward.h  outline.fp  outline.vp  sky_box.fp  sky_box.vp
GL/dragon/: CMakeLists.txt  Makefile  dragon.cpp
GL/esdemo/: MainWindow.xib  esdemo_Prefix.pch  main.m
GL/glyph/: CMakeLists.txt  Makefile  glyph.cpp  glyph.fp
GL/lbatchify/: CMakeLists.txt  lbatchify.cpp  out.txt
GL/lines/: CMakeLists.txt  Makefile  lines.cpp
GL/meshdump/: CMakeLists.txt  Makefile  meshdump.cpp
GL/motionblur/: CMakeLists.txt  blur.fp  blur.vp  motionblur.cpp  motionblur.fp  motionblur.vp
GL/objdump/: CMakeLists.txt  Makefile  objdump.cpp  out  out.mtl
GL/objson/: CMakeLists.txt  box.js  objson.cpp  out.js  pipe_s.js
GL/objview/: CMakeLists.txt  Makefile  objview.cpp  objview.fp  objview.vp
GL/pointpivot/: CMakeLists.txt  Makefile  pointpivot.cpp  pointpivot.fp  pointpivot.vp
GL/pointshapes/: CMakeLists.txt  Makefile  disc.fp  disc.vp  flower.fp  flower.vp  pointshapes.cpp
GL/pointsprites/: CMakeLists.txt  Makefile  pointsprites.cpp  pointsprites.vp
GL/primitives/: CMakeLists.txt  Makefile  primitives.cpp  primitives.fp
GL/rbuffer/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  Makefile  rbuffer.cpp  rbuffer.fp  rbuffer.vp
GL/shaders/: CMakeLists.txt  Makefile  color.vp  color_wave.vp  diffuse_point.fp  diffuse_point.vp  diffuse_point_texture.fp  dissolve.fp  dissolve.vp  outline.fp  outline.vp  shaders.cpp  toon.fp  toon.vp
GL/shared/: Font.cpp  Font.h  FontCache.cpp  FontCache.h  FrameBuffer.h  Framebuffer.cpp  GLUtility.cpp  GLUtility.h  GeometryBatch.cpp  GeometryBatch.h  Image.cpp  Image.h  LFont.cpp  LFont.fp  LFont.hpp  MeshCompute.cpp  MeshCompute.h  MeshMath.cpp  MeshMath.h  ObjModel.cpp  ObjModel.h  Screenshot.cpp  Screenshot.h  ShapeFactory.cpp  ShapeFactory.h  Textures.cpp  Tga.cpp  (+2 more)
GL/text/: CMakeLists.txt  Makefile  text.cpp  text.fp
GL/textures/: CMakeLists.txt  texture_rect.fp  texture_rect.vp  textures.cpp  textures.fp  textures.vp
applescript/: remindme
asm/: foo.c  foo.s
bandit/: CMakeLists.txt  example.cpp
bash/: args.sh  better_bash  brace-expansion.sh  case_args.sh  ccache.sh  cleanl.sh  colours  create_test_data  debug.sh  default_variable_value.bash  dragsim_plot.sh  exists.sh  expect_args.sh  find_boost_stl.sh  foo.txt  for.sh  here_document.sh  if.sh  liners  null.sh  or_die.sh  parameter_substitution.sh  read_lines.sh  rename_eps.sh  rm_executable.sh  sabnzb.sh  scpone.sh  sedinplace.sh  seq.sh  strings.sh  tarstamp.sh  tcpdump.sh  tcpdump_http  traps  unjar.sh  updates3.sh  vars.sh  watch_time.sh  while.sh
bullet-ios-universal/: build.sh
bullet/bullet_quat/: CMakeLists.txt  bullet_quat.cpp
c/: bar.c  bar.h  foo.c  rename_self.c  sizeof.c
c++/: explicit.cpp  makec++  makec11
c++/boost/implicit_astar/: CMakeLists.txt  Makefile
c++/c++11/cpp11_threads/: CMakeLists.txt
c++/c++11/dispatch_io/: CMakeLists.txt  README.html  dispatch_io.cpp
c++/chunksorted/: CMakeLists.txt
c++/clean_url_test/: CMakeLists.txt  README  clean_url_test.cpp  instructions.txt
c++/primes/: CMakeLists.txt
c++/ptrwrap/: CMakeLists.txt  ptrwrap.cpp
c++/streams/: CMakeLists.txt
cairo/: make_template.rb
cairo/cairo_hello/: CMakeLists.txt  cairo_hello.cpp
clisp/: hello2.lisp
clj-script/: dom-testing.cljs  main.js
clojure/: #index-of-any.clj#  completions.clj  liners.clj  meta.clj  optimization.txt
cmake/: FindGCHSupport.cmake
conway/: Board.cpp  Board.h  Cell.h  Conway2D.cpp  Conway2D.h  Game.cpp  Game.h  Kernel.cpp  Kernel.h  conway.1  conway.h  main.cpp  notes.txt
dtrace/: execsuccess.d  open.d  read.d
effective/: item24.h  item30.cpp  item31.cpp  item31.h  sorting.cpp
freetype2/font_info/: CMakeLists.txt  README  fonts.txt  tutorial1.cpp
fsharp/: cash_register.fsx  chapter6.fs  map_colouring.fsx  notes.txt  sandbox.fs  sandbox.fsx
gcc/: flags  preprocessor
git/: liners
gnuplot/: plot_force
haskell/: DiagramsTutorial.hi  DiagramsTutorial.hs
imagemagick/: convert_liners
java/: liners.txt
knight_trav/: README
langs/c++/boostoptions/options1/: CMakeLists.txt
langs/c++/c++11/constexpr/: CMakeLists.txt  constexpr.cpp
langs/c++/tgaio/: CMakeLists.txt  Tga.h  image2_copy.tga
langs/clojure/exrjna/exr_basic/: CMakeLists.txt
langs/lua/invokelua/: CMakeLists.txt  invokelua.cpp  invokelua.lua
linux/: sgdisk.sh
lsystems/dol/: CMakeLists.txt  dol.cpp  result
lua/: hello.lua
lua/invokec/: CMakeLists.txt
lua/luaturtle/: CMakeLists.txt  README  simple.lua  simple.tga
mac/: arch_x64.rtf  kqueue.cpp  liners.txt  mach_timing.cpp
malloc-extra/: README  malloc-extra.c  test.c
mysql/: liners.txt  mysql.install.txt
network/: ports
opencl/OpenCL_Hello_World_Example/: CMakeLists.txt  ReadMe.txt
opencl/addvector/: CMakeLists.txt  LTextFileReader.cpp  LTextFileReader.h  addvector.cl  addvector.cpp
physics/bullethello/: CMakeLists.txt  bullethello.cpp  foo.csv
python/: argparse_demo.py  demodb.db  economics.py  redis_simple.py  setup.py.remove  sqlitedemo.py
rsync/: snippets.txt  sync_music.sh
ruby/: bit_twiddling.rb  building_ruby.txt  create_test_drill_pattern.rb  more_strings.rb  msm2dot.rb  msm2dot_readme.txt  parse_realestate.rb  rbuild.rb  trace.rb
rust/: counter.rs  crates.rs  hello.rs
scripts/: switch_python
sicp/: chapter1.ss  chapter2.ss
toy-problems/knight_trav/Dependencies/: CMakeLists.txt  gtest-1.6.0.patch
toy-problems/knight_trav/Sources/: CMakeLists.txt  knight_travail.cpp  knight_travail.h
toy-problems/knight_trav/Sources/Config/: CMakeLists.txt
toy-problems/knight_trav/Sources/Knight/: io.h  kt.h
unix-network-programming/: unpv13e.tar
vim/: liners.txt
xcode/: liners.sh
(+1057 files in other folders)
