cmake_minimum_required(VERSION 2.6)
set(PROJ glyph)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
link_directories(/usr/X11/lib/)
add_definitions( -DBOOST_ALL_NO_LIB )
include_directories(.)
include_directories(/usr/local/include)
include_directories(/usr/X11/include/)
include_directories(/usr/local/include/freetype2)
include_directories(../shared)
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
set(SOURCES ${SOURCES} ../shared/Screenshot.cpp)
set(SOURCES ${SOURCES} ../shared/Tga.cpp)
set(SOURCES ${SOURCES} ../shared/GeometryBatch.cpp)
set(SOURCES ${SOURCES} ../shared/ShapeFactory.cpp)
set(SOURCES ${SOURCES} ../shared/Textures.cpp)
set(SOURCES ${SOURCES} ../shared/GLUtility.cpp)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} general lexi) # optimized debug
target_link_libraries(${PROJ} general glut) 
target_link_libraries(${PROJ} general GL) 
target_link_libraries(${PROJ} general GLU) 
target_link_libraries(${PROJ} general GLEW) 
target_link_libraries(${PROJ} freetype) # optimized debug
install (TARGETS ${PROJ} DESTINATION bin)
