cmake_minimum_required(VERSION 2.6)
set(PROJ meshdump)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
FIND_PACKAGE ( Boost REQUIRED )
#link_directories(.)
include_directories(.)
include_directories( ${Boost_INCLUDE_DIR} )
add_definitions( -DBOOST_ALL_NO_LIB )
add_definitions( "-DHAS_BOOST" )
#source_group("${PROJ}" FILES ${PROJ}.cpp)
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
set(SOURCES ${SOURCES} ../shared/ObjModel.cpp)
set(SOURCES ${SOURCES} ../shared/ObjModel.h)
set(SOURCES ${SOURCES} ../shared/MeshCompute.cpp)
set(SOURCES ${SOURCES} ../shared/MeshCompute.h)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} boost_filesystem boost_system) # optimized debug
install (TARGETS ${PROJ} DESTINATION bin)
