cmake_minimum_required(VERSION 2.6)
set(PROJ objdump)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
#link_directories(.)
add_definitions( -DBOOST_ALL_NO_LIB )
include_directories(.)
#source_group("${PROJ}" FILES ${PROJ}.cpp)
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
set(SOURCES ${SOURCES} ../shared/ObjModel.cpp)
set(SOURCES ${SOURCES} ../shared/ObjModel.h)
set(SOURCES ${SOURCES} ../shared/MeshMath.h)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} boost_filesystem boost_system) # optimized debug
install (TARGETS ${PROJ} DESTINATION bin)
