cmake_minimum_required(VERSION 2.6)
set(PROJ text)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
link_directories(/usr/X11/lib/)
link_directories(/usr/lib/)
add_definitions( -DBOOST_ALL_NO_LIB )
include_directories(.)
include_directories(/usr/local/include)
include_directories(/usr/local/include/lexi/GL)
include_directories(/usr/local/include/freetype2)
include_directories(/usr/X11/include/)
#include_directories(/usr/include/)
include_directories(../shared)
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
set(SOURCES ${SOURCES} ../shared/Image.cpp)
set(SOURCES ${SOURCES} ../shared/Image.h)
set(SOURCES ${SOURCES} ../shared/Font.cpp)
set(SOURCES ${SOURCES} ../shared/Font.h)
set(SOURCES ${SOURCES} ../shared/FontCache.cpp)
set(SOURCES ${SOURCES} ../shared/FontCache.h)
set(SOURCES ${SOURCES} ../shared/Screenshot.cpp)
set(SOURCES ${SOURCES} ../shared/Tga.cpp)
set(SOURCES ${SOURCES} ../shared/GeometryBatch.cpp)
set(SOURCES ${SOURCES} ../shared/ShapeFactory.cpp)
set(SOURCES ${SOURCES} ../shared/Textures.cpp)
set(SOURCES ${SOURCES} ../shared/GLUtility.cpp)
set(SOURCES ${SOURCES} ../shared/LFont.cpp)
set(SOURCES ${SOURCES} ../shared/LFont.hpp)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} general lexi) # optimized debug
target_link_libraries(${PROJ} general glut) 
target_link_libraries(${PROJ} general GL) 
target_link_libraries(${PROJ} general GLU) 
target_link_libraries(${PROJ} general GLEW) 
target_link_libraries(${PROJ} freetype) # optimized debug
install (TARGETS ${PROJ} DESTINATION bin)
