cmake_minimum_required(VERSION 2.6)
set(PROJ textures)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
link_directories(/usr/X11/lib/)
include_directories(.)
include_directories(/usr/local/include)
include_directories(/usr/X11/include/)
include_directories(../shared)
find_package(Boost REQUIRED COMPONENTS system filesystem)
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIRS})
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
set(SOURCES ${SOURCES} ../shared/Screenshot.cpp)
set(SOURCES ${SOURCES} ../shared/Tga.cpp)
set(SOURCES ${SOURCES} ../shared/GeometryBatch.cpp)
set(SOURCES ${SOURCES} ../shared/ShapeFactory.cpp)
set(SOURCES ${SOURCES} ../shared/Textures.cpp)
set(SOURCES ${SOURCES} ../shared/GLUtility.cpp)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} general lexi) # optimized debug
target_link_libraries(${PROJ} general glut) 
target_link_libraries(${PROJ} general GL) 
target_link_libraries(${PROJ} general GLU) 
target_link_libraries(${PROJ} general GLEW) 
target_link_libraries(${PROJ} ${Boost_LIBRARIES})
install (TARGETS ${PROJ} DESTINATION bin)
