cmake_minimum_required(VERSION 2.6)
set(PROJ bullet_quat)
project(${PROJ})
set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
include_directories(.)
include_directories(${CMAKE_INSTALL_PREFIX}/include/bullet)
message("prefix ${CMAKE_INSTALL_PREFIX}")
find_package(Boost)
if (Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  set(SOURCES)
  set(SOURCES ${SOURCES} ${PROJ}.cpp)
  add_executable(${PROJ} ${SOURCES})
  target_link_libraries(${PROJ} ${Boost_LIBRARIES})
  install (TARGETS ${PROJ} DESTINATION bin)
endif()

