cmake_minimum_required(VERSION 2.6)
set(PROJ clean_url_test)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
include_directories(.)
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
add_executable(${PROJ} ${SOURCES})
install (TARGETS ${PROJ} DESTINATION bin)
