cmake_minimum_required(VERSION 2.6)
set(PROJ primes)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
include_directories(.)
find_package(Boost)
if (Boost_FOUND)
  #ADD_DEFINITIONS("-std=c++0x") 
  set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
  include_directories(${Boost_INCLUDE_DIRS})
  add_definitions( -DBOOST_ALL_NO_LIB )
  set(SOURCES)
  set(SOURCES ${SOURCES} ${PROJ}.cpp)
  add_executable(${PROJ} ${SOURCES})
  target_link_libraries(${PROJ} ${Boost_LIBRARIES})
endif()
install (TARGETS ${PROJ} DESTINATION bin)
