cmake_minimum_required(VERSION 2.6)
set(PROJ luaturtle)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
find_package ( Lua51 REQUIRED )
include_directories(.)
include_directories(/usr/local/include)
#include_directories($(LUA_INCLUDE_DIR))
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
set(SOURCES ${SOURCES} Tga.cpp)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} ${LUA_LIBRARIES}) 
install (TARGETS ${PROJ} DESTINATION bin)
