cmake_minimum_required(VERSION 2.6)
set(PROJ hello)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
find_package ( OpenCL REQUIRED )
include_directories(.)
include_directories( ${OPENCL_INCLUDE_DIR} )
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.c)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} ${OPENCL_LIBRARIES})
install (TARGETS ${PROJ} DESTINATION bin)
