cmake_minimum_required(VERSION 2.6)
set(PROJ addvector)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
find_package ( OpenCL REQUIRED )
add_definitions( -DBOOST_ALL_NO_LIB )
include_directories(.)
include_directories( ${OPENCL_INCLUDE_DIR} )
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
set(SOURCES ${SOURCES} LTextFileReader.cpp)
add_executable(${PROJ} ${SOURCES})
#target_link_libraries(${PROJ} general boost_system) # optimized debug
target_link_libraries(${PROJ} ${OPENCL_LIBRARIES})
install (TARGETS ${PROJ} DESTINATION bin)
