cmake_minimum_required(VERSION 2.6)
set(PROJ implicit_astar)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
#link_directories(.)
add_definitions( -DBOOST_ALL_NO_LIB )
include_directories(.)
find_package(Boost COMPONENTS system program_options graph)
if (Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  add_definitions( -DBOOST_ALL_NO_LIB )
  set(SOURCES)
  set(SOURCES ${SOURCES} ${PROJ}.cpp)
  add_executable(${PROJ} ${SOURCES})
  target_link_libraries(${PROJ} ${Boost_LIBRARIES})
endif()
install (TARGETS ${PROJ} DESTINATION bin)
