cmake_minimum_required(VERSION 2.6)
set(PROJ cpp11_threads)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
include_directories(.)
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
add_executable(${PROJ} ${SOURCES})
install (TARGETS ${PROJ} DESTINATION bin)

