cmake_minimum_required(VERSION 2.6)
set(PROJ dispatch_io)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
#set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
include_directories(.)
find_package(Boost)
if (Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  add_definitions( -DBOOST_ALL_NO_LIB )                                                         
  set(SOURCES)
  set(SOURCES ${SOURCES} ${PROJ}.cpp)
  add_executable(${PROJ} ${SOURCES})
  target_link_libraries(${PROJ} ${Boost_LIBRARIES})
  install (TARGETS ${PROJ} DESTINATION bin)
endif()

