cmake_minimum_required(VERSION 2.6)
set(PROJ invokelua)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
add_definitions( -DBOOST_ALL_NO_LIB )
include_directories(.)
#include_directories(/Users/daniel/local/include/)
link_directories(/usr/local/lib/lua/5.1)
#link_directories(/Users/daniel/local/lib/)
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} general lua) # optimized debug
install (TARGETS ${PROJ} DESTINATION bin)
